[package]
name = "mathtomath"
version = "0.1.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2018"
description = "Convert mathematical expressions between different formats"
license = "GPL-3.0-or-later"
readme = "Readme.md"
#keywords = ["math", "algebra"]
categories = ["mathematics", "parser-implementations"]
#repository = "https://github.com/a-maier/series-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.7"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
nom = "5"
phf = { version = "0.8", features = ["macros"] }
structopt = "0.3"
subslice = "0.2"
regex = "1.3"
ansi_term = "0.12"
