[package]
name = "mathtomath"
version = "0.4.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Convert mathematical expressions between different formats"
license = "GPL-3.0-or-later"
readme = "Readme.md"
categories = ["mathematics", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0"
clap = { version = "4.5", features = ["derive"] }
confy = "0.6"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
nom = "7"
phf = { version = "0.11", features = ["macros"] }
subslice = "0.2"
regex = "1.5"
ansi_term = "0.12"
serde = "1"
serde_derive = "1"
